--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,9 +17,10 @@ status-website:
   name: Locaal AI / Contents Pal
   introTitle: "Contents Pal - the leading AI contents claims processing platform"
   introMessage: [Contents Pal](https://contentspal.com) helps your teams create fast and accurate content inventories and valuation reports using simple apps and AI agents.
+  publish: true
   navbar:
-    - title: Status
-      href: /
+    title: Status
+    href: /
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
