--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -24,5 +24,8 @@ status-website:
     - title: Contents Pal
       href: https://contentspal.com
 
+workflowSchedule:
+  uptime: "*/30 * * * *"
+  
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
